Fixed styling. Need to handle long output (add scrollbars and prevent output from covering buttons)

--- a/787/HW5/src/main/webapp/css/simple_fire_bug.css
+++ b/787/HW5/src/main/webapp/css/simple_fire_bug.css
@@ -31,3 +31,25 @@
 	width: 50%;
 }
 
+.inputJS {
+	font-weight: bold;
+}
+
+textArea.simpleFireBug{
+   resize: none;
+   border: none;
+   overflow-y: scroll;
+}
+
+.hideRightBorder {
+	border-right: 0px !important;
+}
+
+.hideLeftBorder {
+	border-left: 0px !important;
+}
+
+table,th,td.simpleFireBug {
+	border:1px solid black;
+	border-collapse:collapse;
+}
